Added colours, div containers, and starting moving stuff around!

--- a/index.html
+++ b/index.html
@@ -4,71 +4,48 @@
 <head>
   <meta charset="utf-8">
   <title>Joshua Chan</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
-  <table cellspacing='150'>
-    <tr>
-      <td><img src="images/profilePic.jpg" alt="Profile Pic" width="300"></td>
-      <td>
-        <h1>Joshua Chan</h1>
-        <p>Exploring what I'm capable of and seeing what my Future holds. Studying Mechanical Engineering at Queen's University and keen on seeing what fruits the software industry can provide.</p>
-      </td>
-    </tr>
-  </table>
-  <h3><a href="index.html">Home</a> <a href="experience.html">Working on Expereinces</a> <a href="contacts.html">Contact Me</a> <a href="notes.html">Chicken Skratches</a></h3>
+  <div class="">
+    <div class="meContainer">
+      <table style="background-color: #FFF56D;">
+        <tr>
+          <td><img src="images/profilePic.jpg" alt="Profile Pic" width="400" border="3"></td>
+          <td>
+            <h1>Joshua Chan</h1>
+            <p>Exploring what I'm capable of and seeing what my Future holds. Studying Mechanical Engineering at Queen's University and keen on seeing what fruits the software industry can provide.</p>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="contents">
+      <h3><a href="index.html">Home</a> <a href="experience.html">What I know</a> <a href="contacts.html">Contact Me</a> <a href="notes.html">Chicken Skratches</a></h3>
+    </div>
+    <hr>
+    <div class="projectsContainer">
+      <h2>Projects</h2>
+      <table>
+        <tr>
+          <td>
+            <h4>Trees</h4>
+            <p class="blurb">My Thought Provoking Journey of Creating This</p>
+          </td>
+          <td class="desc">A giant live decision tree that takes you on a journey of how I ended up where I am. I've considered many factors (Cost benefits, financial anaylses, my mental agony, what others did) and ended up here...</td>
+        </tr>
+        <tr>
+          <td>
+            <h4>Something with Django?</h4>
+            <p class="blurb">A project using the Django framework?</p>
+          </td>
+          <td class="desc">A too dooo app thingy?</td>
+        </tr>
+      </table>
+    </div>
 
-  <hr size="3" noshade>
-  <h2>Projects</h2>
-  <table>
-    <tr>
-      <td>
-        <h4>Trees</h4>
-        <p>My Thought Provoking Journey of Creating This</p>
-      </td>
-      <td>A giant live decision tree that takes you on a journey of how I ended up where I am. I've considered many factors (Cost benefits, financial anaylses, my mental agony, what others did) and ended up here...</td>
-    </tr>
-    <tr>
-      <td>
-        <h4>Do U Want An Interveiw?</h4>
-        <p>A Resume Scanning App? Maybe? we'll see</p>
-      </td>
-      <td>I was supposed to make this at my time at Syntronic, but I guess we never got around to it. Let's see if I ever get around to it too!? :D</td>
-    </tr>
-  </table>
-
-  <hr size='3' noshade>
-  <h2>Education</h2>
-  <table>
-    <tr>
-      <td>
-        <h3>Queen's University</h3>
-        <p>Kingston, Ontario</p>
-        <p>2019-Present</p>
-      </td>
-      <td>
-        <ul>
-          <li>Third year student in Mechanical Engineering working towards a bachelor's in Applied Science and Engineering</li>
-          <li>Related Coursework: Heat Transfer, Fluid Dymics, Open-ended team-based design challenges, Dyanmic and static structures</li>
-        </ul>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <h3>Singapore American School</h3>
-        <p>Singapore, Singapore</p>
-        <p>2016-2019</p>
-      </td>
-      <td>
-        <ul>
-          <li>High School Diploma with Honors</li>
-        </ul>
-      </td>
-    </tr>
-  </table>
-
-  <hr size='3' noshade>
-
+  </div>
 </body>
 
 </html>
