--- a/experience.html
+++ b/experience.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Josh's Work Experience</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body. <h2>Josh's Experience</h2>
   <h3><a href="index.html">Home</a> <a href="experience.html">Working on Expereinces</a> <a href="contacts.html">Contact Me</a> <a href="notes.html">Chicken Skratches</a></h3>
@@ -15,7 +16,37 @@
     <li>Adapted from COVID-19 and realigned the QBBT goals to build a strong team member foundation for future years and added 18 new members to the team.</li>
     <li>Supervised and led the executive team to provide a fun and engaging learning environment for QBBT general members through a modified in-person/online delivery during the reopening phase of COVID-19.</li>
   </ul>
-
+  <div class="educationContainer">
+    <h2>Education</h2>
+    <table>
+      <tr>
+        <td>
+          <h3>Queen's University</h3>
+          <p>Kingston, Ontario</p>
+          <p>2019-Present</p>
+        </td>
+        <td>
+          <ul>
+            <li>Third year student in Mechanical Engineering working towards a bachelor's in Applied Science and Engineering</li>
+            <li>Related Coursework: Heat Transfer, Fluid Dymics, Open-ended team-based design challenges, Dyanmic and static structures</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <h3>Singapore American School</h3>
+          <p>Singapore, Singapore</p>
+          <p>2016-2019</p>
+        </td>
+        <td>
+          <ul>
+            <li>High School Diploma with Honors</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+    <hr>
+  </div>
   </body>
 
 </html>
