--- a/index.html
+++ b/index.html
@@ -6,45 +6,41 @@
   <title>Joshua Chan</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="images/favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee+Shade&family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div class="">
-    <div class="meContainer">
-      <table style="background-color: #FFF56D;">
-        <tr>
-          <td><img src="images/profilePic.jpg" alt="Profile Pic" width="400" border="3"></td>
-          <td>
-            <h1>Joshua Chan</h1>
-            <p>Exploring what I'm capable of and seeing what my Future holds. Studying Mechanical Engineering at Queen's University and keen on seeing what fruits the software industry can provide.</p>
-          </td>
-        </tr>
-      </table>
+  <div class="contents">
+    <h3><a href="index.html">Home</a> <a href="experience.html">What I know</a> <a href="contacts.html">Contact Me</a> <a href="notes.html">Chicken Skratches</a></h3>
+  </div>
+  <div class="meContainer">
+    <img class="pp" src="images/profilePic.jpg" alt="Profile Pic" width="400" border="3">
+    <div class="meText">
+      <h1><span class="start">J</span>oshua <span class="start">C</span>han</h1>
+      <p>Exploring what I'm capable of and seeing what my Future holds. Studying Mechanical Engineering at Queen's University and keen on seeing what fruits the software industry can provide.</p>
     </div>
-    <div class="contents">
-      <h3><a href="index.html">Home</a> <a href="experience.html">What I know</a> <a href="contacts.html">Contact Me</a> <a href="notes.html">Chicken Skratches</a></h3>
-    </div>
-    <hr>
-    <div class="projectsContainer">
-      <h2>Projects</h2>
-      <table>
-        <tr>
-          <td>
-            <h4>Trees</h4>
-            <p class="blurb">My Thought Provoking Journey of Creating This</p>
-          </td>
-          <td class="desc">A giant live decision tree that takes you on a journey of how I ended up where I am. I've considered many factors (Cost benefits, financial anaylses, my mental agony, what others did) and ended up here...</td>
-        </tr>
-        <tr>
-          <td>
-            <h4>Something with Django?</h4>
-            <p class="blurb">A project using the Django framework?</p>
-          </td>
-          <td class="desc">A too dooo app thingy?</td>
-        </tr>
-      </table>
-    </div>
-
+  </div>
+  <hr>
+  <div class="projectsContainer">
+    <h2>Projects</h2>
+    <table>
+      <tr>
+        <td>
+          <h4>Trees</h4>
+          <p class="blurb">My Thought Provoking Journey of Creating This</p>
+        </td>
+        <td class="desc">A giant live decision tree that takes you on a journey of how I ended up where I am. I've considered many factors (Cost benefits, financial anaylses, my mental agony, what others did) and ended up here...</td>
+      </tr>
+      <tr>
+        <td>
+          <h4>Something with Django?</h4>
+          <p class="blurb">A project using the Django framework?</p>
+        </td>
+        <td class="desc">A too dooo app thingy?</td>
+      </tr>
+    </table>
   </div>
 </body>
 
