--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Joshua Chan</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="icon" href="../images/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee+Shade&family=Montserrat&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
   <div class="contents">
     <h3>
       <a href="index.html">Home</a>
-      <a href="templates/reads.html">Reading List</a>
+      <a href="reads.html">Reading List</a>
     <h3>
   </div>
 
@@ -33,16 +33,16 @@
 
     <div class="links">
       <div class="social-links">
-        <img class="logo" src='images/git-logo.png' />
+        <img class="logo" src='../images/git-logo.png' />
         <a href="https://github.com/The-Josh-Chan">Github</a>
       </div>
       <div class="social-links">
-        <img class="logo" src='images/linkedin-logo.png' />
+        <img class="logo" src='../images/linkedin-logo.png' />
         <a href="https://www.linkedin.com/in/thejoshchan/">LinkedIn</a>
       </div>
       <div class="social-links">
-        <img class="logo" src='images/resume.png' />
-        <a href="images/JoshuaChanResume.pdf" download>Resume</a>
+        <img class="logo" src='../images/resume.png' />
+        <a href="../images/JoshuaChanResume.pdf" download>Resume</a>
       </div>
     </div>
 
