Fixed resume download bug

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <div class="social-links">
         <img class="logo" src='images/resume.png' />
-        <a href="/images/JoshuaChanResume.pdf" download>Resume</a>
+        <a href="images/JoshuaChanResume.pdf" download>Resume</a>
       </div>
     </div>
 
