adding expereinces tab to pages

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <h3>
       <a href="index.html">Home</a>
       <a href="templates/reads.html">Reading List</a>
+      <a href="templates/experience.html">Expereinces</a>
     <h3>
   </div>
 
