Finalizing expeirence and home page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,21 @@
               <p>Simple to-do app</p>
             </div>
           </td>
-          <td class="desc">A simple to-do app built with Python and Flask that follows CRUD principals. A small something to get the coding juicing flowing again.</td>
+          <td class="desc">
+            <p>A simple to-do app built with Python and Flask that follows CRUD principals. A small something to get the coding juicing flowing again.</p>
+            <a>https://github.com/The-Josh-Chan/To-Do</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="project">
+              <h4>Weather Data Collection and Storage</h4>
+              <p>Collect and Store Data</p>
+            </div>
+          </td>
+          <td class="desc">
+            <p>Making multiple API calls to different weather data sources and storing them in a database for retreival </p>
+          </td>
         </tr>
         <tr>
           <td>
@@ -66,7 +80,9 @@
               <p>Something that uses API shippo</p>
             </div>
           </td>
-          <td class="desc">Practicing some api calls with shippo? What is shippo?</td>
+          <td class="desc">
+            <p>Practicing some api calls with shippo? What is shippo? This Never Came to BE :(( </p>
+          </td>
         </tr>
       </table>
     </div>
