adding addition page for mech stuff

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 
   <div class="contents">
     <h3>
-      <a href="index.html">Home</a>
-      <a href="templates/reads.html">Reading List</a>
-      <a href="templates/experience.html">Expereinces</a>
+      <a href="../index.html">Home</a>
+      <a href="reads.html">Reading List</a>
+      <a href="experience.html">Experience</a>
+      <a href="mech460.html">MECH 460</a>
     <h3>
   </div>
 
@@ -53,13 +54,25 @@
         <tr>
           <td>
             <div class="project">
+              <h4>My Website</h4>
+              <p>The ongoing project of creating this website</p>
+            </div>
+          </td>
+          <td class="desc">
+            <p>This website is used for me to practice my coding skills. Currently using html and minimal CSS, looking to add some js and potentially some backend component.</p>
+            <a href="https://github.com/The-Josh-Chan/ecstatic-schematic">Git Repo</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="project">
               <h4>To Do App</h4>
               <p>Simple to-do app</p>
             </div>
           </td>
           <td class="desc">
             <p>A simple to-do app built with Python and Flask that follows CRUD principals. A small something to get the coding juicing flowing again.</p>
-            <a>https://github.com/The-Josh-Chan/To-Do</a>
+            <a href='https://github.com/The-Josh-Chan/To-Do'>Git Repo</a>
           </td>
         </tr>
         <tr>
@@ -71,6 +84,28 @@
           </td>
           <td class="desc">
             <p>Making multiple API calls to different weather data sources and storing them in a database for retreival </p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="project">
+              <h4>Gear Box Assembly</h4>
+              <p>MECH 323 Design Project</p>
+            </div>
+          </td>
+          <td class="desc">
+            <p>A team based design project where we modeled and 3D printed a gearbox assembly to complete two objectives: Maximum Torque Output and Maximum Angular Velocity</p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="project">
+              <h4>Bone Scaffold</h4>
+              <p>APSC200 Design Project</p>
+            </div>
+          </td>
+          <td class="desc">
+            <p>Antoher team based design project where we Modeled and 3D printed a bone scaffold</p>
           </td>
         </tr>
         <tr>
