--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="../index.html">Home</a>
       <a href="reads.html">Reading List</a>
       <a href="experience.html">Experience</a>
-      <a href="mech460.html">MECH 460</a>
+      <a href="mech.html">MECH 460</a>
     <h3>
   </div>
 
