--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
   <div class="contents">
     <h3>
       <a href="index.html">Home</a>
-      <a href="templates/reads.html">Reading List</a>
-      <a href="templates/experience.html">Expereinces</a>
-      <a href="templates/mech.html">MECH 460</a>
+      <a href="reads.html">Reading List</a>
     <h3>
   </div>
 
