--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="contents">
     <h3>
       <a href="index.html">Home</a>
-      <a href="reads.html">Reading List</a>
+      <a href="templates/reads.html">Reading List</a>
     <h3>
   </div>
 
