debugging href links

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <h3>
       <a href="index.html">Home</a>
       <a href="templates/reads.html">Reading List</a>
+      <a href="templates/experience.html">Experience</a>
+        <a href="templates/mech.html">MECH 460</a>
     <h3>
   </div>
 
