--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="social-links">
         <img class="logo" src='images/resume.png' />
-        <a href="images/JoshuaChanResume.pdf" download>Resume</a>
+        <a href="images/JoshuaChanResume20230910SE.pdf" download>Resume</a>
       </div>
     </div>
 
